# rfid-book-lending

./: .gitignore  README.md  app.db  app.py  config.py  pyproject.toml
app/: app.py  models.py  routes.py
app/templates/: checkout.html  index.html  inventory.html  inventory.html~  register.html  register.html~  stream.html
migrations/versions/: bad2af1d06f9_books_table.py
templates/: inventory.html  stream.html
