[tool.poetry]

name = "rfid-book-lending"
version = "0.0"
description = "Flask backend for RFID personal library."
authors = ["Dan Lindeman <lindemda@gmail.com>"]

packages = [
    { include = "app" },
]

[tool.poetry.dependencies]

python = "^3.5"

Flask = "^1.1"
Flask-SQLAlchemy = "^2.4"
Flask-Migrate = "^2.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

app = 'app:app.run'

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
